# Decompiler

./: .gitignore  README.md  settings.gradle
.github/workflows/: build.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bridge.h  jni_bridge.cpp  opensl_audio.cpp
app/src/main/cpp/snes9x/: cdl.cpp  cdl.h  cpuexec.cpp
app/src/main/java/com/diogo/snesdeco/disasm/: Disassembler.kt  MiniAssembler65816.kt  Opcodes65816.kt
app/src/main/java/com/diogo/snesdeco/emu/: ExtractionSession.kt  NativeBridge.kt  SpriteRipper.kt
app/src/main/java/com/diogo/snesdeco/gfx/: PaletteDecoder.kt  TileDecoder.kt
app/src/main/java/com/diogo/snesdeco/rom/: AddressMapper.kt  RomInfo.kt  RomLoader.kt  RomRepository.kt
app/src/main/java/com/diogo/snesdeco/ui/: CoverageBar.kt  DisasmAdapter.kt  DisasmFragment.kt  EmulatorActivity.kt  ExplorerPagerAdapter.kt  ExtractionExporter.kt  HexFragment.kt  InfoFragment.kt  LabActivity.kt  MainActivity.kt  PackageExporter.kt  PaletteFragment.kt  RamExplorerActivity.kt  RomExplorerActivity.kt  SaveUtils.kt  SpriteViewerActivity.kt  TilesFragment.kt
app/src/main/res/drawable/: btn_pill.xml  btn_round.xml  dpad_cross.xml  ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/layout/: activity_emulator.xml  activity_lab.xml  activity_main.xml  activity_ram_explorer.xml  activity_rom_explorer.xml  activity_sprite_viewer.xml  fragment_disasm.xml  fragment_hex.xml  fragment_info.xml  fragment_palette.xml  fragment_tiles.xml  item_disasm_line.xml  item_hex_line.xml  item_palette_swatch.xml  item_sprite_thumb.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
